# quantum-fluid-dynamics

./: .gitattributes  .gitignore  README.md
code/classical/finite-volume-method/: CMakeLists.txt  README.md  build.sh
code/classical/finite-volume-method/src/: fluid_solver.cu
demos/: DEMOS.md
paper/PHY473/proposal/: references.bib
proposal/: proposal.tex
report/: final.tex  references.bib  report.tex
report/PHY473/: final.tex
simulation/finite-volume-method/: INTIAL_CONDITIONS.txt  README.md
simulation/finite-volume-method/src/: fluid_solver.cuh  main.cpp  renderer.cpp  renderer.h
